new spell words added

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -6,9 +6,11 @@
     "flowbite",
     "Jobbox",
     "Leftbar",
+    "mfoky",
     "middlewares",
     "reduxjs",
     "signin",
+    "todoapp",
     "trnx"
   ],
   "[jsonc]": {
